# zero2prod

./: .dockerignore  .envrc  Cargo.toml  Dockerfile  shell.nix
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220425112127_create_subscriptions_table.sql
scripts/: init_db.sh  run-tests-with-log.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/all/: helpers.rs  subscriptions.rs
